fix emission marker overflow

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -269,10 +269,6 @@ $h-countryMenu: 40px;
     // cursor: pointer;
 }
 
-.indc-country {
-    overflow: visible;
-}
-
 .indc-overview-container[view="cumulative"],
 .indc-overview-container[view="cumulativezoom"],
 .indc-overview-container[view="1990"] {
